##Text encoding: utf-8

2010-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: destroy a mechanismstep when the last arrow
	is removed.

2010-12-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/curvedarrowtool.cc: removed a printf debug statement.
	* plugins/paint/selection/lassotool.cc: allow rotation around an atom, and
	call EmitSignal for all modified objects.

2010-12-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.
	* libs/gcp/atom.cc: fixed electrons lone pairs count for atoms with
	an xtended octet.
	* libs/gcp/tool.cc: don't set Tool::m_Pressed when OnClicked return false.
	* plugins/paint/residues/residues-dlg.cc: don't use deprecated
	GtkNotebookPage.
	* programs/calc/gchemcalc.cc: ditto.

2010-12-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.cc: avoid crashes when activating a tool.

2010-12-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.cc: do not allow document changes using keyboard while
	dragging the mouse. [#31812]
	* libs/gcp/view.cc: ditto.
	* libs/gcp/window.cc: ditto.

2010-12-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/chaintool.cc: fixed more undo/redo issues.
	* plugins/paint/cycles/cycletool.cc: ditto.

2010-12-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-arrow.cc: never remove a molecule from it's reactant
	parent.
	* libs/gcp/reactant.cc:  update Child when needed.
	* libs/gcp/reaction-step.cc: remove unneeded operators.
	* libs/gcp/view.cc: fix more undo/redo issues.

2010-11-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fixed more undo/redo issues.
	* libs/gcp/document.h: ditto.
	* libs/gcp/view.cc: ditto.
	* plugins/paint/selection/erasertool.cc: ditto.

2010-11-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: don't crash when deleting a partial selection.